2001-07-11  Thomas E. Dickey  <dickey@clark.net>

	* src/dedring.c: rename 'ring' to work with U/Win

2001-06-22  Thomas E. Dickey  <dickey@clark.net>

	* install-sh: newer version uses ':' rather than 'true'

2001-05-15  Thomas E. Dickey  <dickey@clark.net>

	* src/dlog.c: rename 'newline' param to work with U/Win

	* src/dedcolor.c: rename 'color_names[]' to work with U/Win

2001-01-30  Thomas E. Dickey  <dickey@clark.net>

	* src/dedscan.c: lookup based on z_real_name

	* src/dedscan.c: check for null-pointer in alloc_name()

	* src/ded.c: retain abort(), but make it optional

2001-01-29  Thomas E. Dickey  <dickey@clark.net>

	* src/dedfree.c, src/dedscan.c, src/dedsort.c, src/ded.h:
	caseless-filenames

	* src/ded.h, src/dedsort.c, src/dedscan.c, src/dedfree.c, src/dedcolor.c, src/ded2s.c, src/dedview.c:
	renaming-FLIST-members

	* src/ded.c: don't abort on newterm/initscr failure...

	* aclocal.m4: workaround for autoconf 2.49c

2000-12-26  Thomas E. Dickey  <dickey@clark.net>

	* src/cnames.rc: sync'd with ccodes.rc

	* src/ccodes.rc: trim blanks

2000-12-23  Thomas E. Dickey  <dickey@clark.net>

	* src/ccodes.rc: add qansi-m

2000-12-02  Thomas E. Dickey  <dickey@clark.net>

	* src/dedcolor.c:
	renamed strlcpy() to strlwrcpy() to accommodate bogus function on FreeBSD 4.x

2000-11-01  Thomas E. Dickey  <dickey@clark.net>

	* src/ccodes.rc: resync with sl36

	* aclocal.m4: fix path-lookup with CF_PROG_EXT

	* aclocal.m4: added CF_LIB_PREFIX dependency

	* aclocal.m4: add CF_LIB_PREFIX and CF_PATHSEP
	got this to build on OS/2 EMX

	* src/ftree.c:
	oops - I had left caller_top not initialized if SIGWINCH was not defined.
	it's not defined on OS/2 EMX

	* src/ccodes.rc: add 'ansi' to list of color terminals

	* configure.in: use CF_LIB_PREFIX

2000-10-19  Thomas E. Dickey  <dickey@clark.net>

	* user/ded.man: typo

	* user/ded.man: add -p option

	* src/version.h:
	19 Oct 2000, add '-p' option to print selected pathnames.