@@ -1,4 +1,4 @@
-MANIFEST for ded, version t20010711
+MANIFEST for ded, version t20010715
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
